2007-04-09  Boyd Timothy  <btimothy@gmail.com>

	* configure.in: Bump version to 0.6.2.

	* NEWS: Update for 0.6.2.

2007-03-12  Boyd Timothy  <btimothy@gmail.com>

	* configure.in: Bump version to 0.6.1.

	* NEWS: Update for 0.6.1.

2007-03-06  Boyd Timothy  <btimothy@gmail.com>

	* NEWS: Fix typo of calling 0.6.0, 0.5.10.

2007-03-05  Boyd Timothy  <btimothy@gmail.com>

	* configure.in: Bump version to 0.6.0 (stable release).

	* NEWS: Update for 0.6.0.

2007-03-05  Sandy Armstrong  <sanfordarmstrong@gmail.com

	* Tomboy/PluginManager.cs: When attaching plugins to notes, be sure to
	iterate through a copy of the list of notes, as notes may be added or
	removed to the list by the plugins that are being instantiated.  Fixes
	bug #414957.

2007-03-05  Boyd Timothy  <btimothy@gmail.com>

	* Tomboy/Preferences.cs: Patch from Sanford Armstrong to make the plugins
	Settings button be insensitive by default and prevent null reference crash.
	Fixes bug #414933.
	
2007-03-02  Boyd Timothy  <btimothy@gmail.com>

	* Tomboy/NoteWindow.cs: Respect Emacs keybindings for Ctrl-W and Ctrl-N.
	Fixes bug #412402.
	
2007-03-01  Boyd Timothy  <btimothy@gmail.com>

	* Tomboy/NoteWindow.cs: Use RadioMenuItem.Activated instead of the Toggled
	event.  This makes it so that even if "Normal" or another font size is
	already selected, a large selection of text (with multiple sizes) can be
	sized to the selected font.  Fixes bug #412404.
	
2007-03-01  Boyd Timothy  <btimothy@gmail.com>

	* Tomboy/Plugins/StickyNoteImport.cs: Use the Defines.VERSION string since
	this is a built-in/official plugin.
	
2007-03-01  Boyd Timothy  <btimothy@gmail.com>

	* configure.in: Cleaned up the check for ndesk-dbus-1.0 by not using an
	else statement.  Additional cleanup fix for bug #405577.
	
2007-03-01  Boyd Timothy  <btimothy@gmail.com>

	* Tomboy/Watchers.cs: Added a comment in the code about why the previous
	change is needed (bug #413234).
	
2007-02-28  Boyd Timothy  <btimothy@gmail.com>
