@@ -1,3 +1,8 @@
+2007-04-09  Boyd Timothy <btimothy@gmail.com>
+
+        * Tomboy/Makefile.am: Changed EXTRA_DIST so it always includes the
+          internal dbus-sharp *.cs files.  Fixes bug #427933.
+
 2007-04-09  Boyd Timothy  <btimothy@gmail.com>
 
 	* configure.in: Bump version to 0.6.2.
